--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,11 @@ body {
     right: 0;
     width: 25%;
  }
+
+ #content-target {
+    font-size: 20px;
+    color: black;
+    text-align: justify;
+ }
+
+ 
