--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0px;
     line-height: 1.5;
@@ -55,7 +56,6 @@ body {
     margin-right: 100px;
 }
 .content-info {
-    font-size: 20px;
     color: #0e2452;
     display: inline-block;
 }
@@ -73,7 +73,6 @@ body {
  }
 
  #content-target {
-    font-size: 20px;
     color: black;
     text-align: justify;
  }
@@ -81,11 +80,14 @@ body {
  .flex {
     display: flex;
     border-bottom: 2px solid #E8E8E8;
-    font-size: 20px;
     padding: 4px;
     column-gap: 50px;
  }
 
  .flex > div {
     width: 1000px;
+ }
+
+ .section-content {
+    font-size: 20px;
  }
